fix spacing

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -12,12 +12,12 @@ body {
     }
 
     > main {
-        flex: 0 0 auto;
+        flex: 1 0 auto;
         @include mixin.margin-y( unset );
     }
 
     > aside {
-        flex: 0 0 auto;
+        flex: 1 0 auto;
         @include mixin.margin-y( unset );
     }
 
@@ -62,13 +62,16 @@ body > header {
 
 // main menu
 body > main nav {
-    margin-top: -1rem;
+    height: 100%;
 
     ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+        align-content: space-around;
         align-items: center;
+        
+        height: 100%;
 
         margin-block-start: 0;
         margin-block-end: 0;
@@ -113,58 +116,65 @@ body > main nav {
 }
 
 // SNS list
-body > aside nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+body > aside nav {
+    height: 100%;
 
-    margin-block-start: 0;
-    margin-block-end: 0;
-    padding-inline-start: 0;
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-content: space-around;
+        align-items: center;
 
-    list-style: none;
+        height: 100%;
 
-    li {
-        flex: 0 0 7rem;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        padding-inline-start: 0;
 
-        text-align: center;
+        list-style: none;
 
-        a {
-            display: inline-block;
+        li {
+            flex: 0 0 7rem;
 
-            width: 100%;
-            height: 4rem;
-            line-height: 4rem;
+            text-align: center;
 
-            * {
-                vertical-align: middle;
-            }
+            a {
+                display: inline-block;
 
-            &,
-            &:active,
-            &:hover,
-            &:visited,
-            &:focus {
-                color: inherit;
-                text-decoration: none;
-            }
-        }
-
-        img {
-            &#hatena-blog {
-                width: 4rem;
+                width: 100%;
                 height: 4rem;
-            }
-            &#pixiv,
-            &#annict {
-                width: 2.5rem;
-                height: 2.5rem;
-            }
-        }
+                line-height: 4rem;
 
-        i.fab {
-            font-size: 250%;
+                * {
+                    vertical-align: middle;
+                }
+
+                &,
+                &:active,
+                &:hover,
+                &:visited,
+                &:focus {
+                    color: inherit;
+                    text-decoration: none;
+                }
+            }
+
+            img {
+                &#hatena-blog {
+                    width: 4rem;
+                    height: 4rem;
+                }
+                &#pixiv,
+                &#annict {
+                    width: 2.5rem;
+                    height: 2.5rem;
+                }
+            }
+
+            i.fab {
+                font-size: 250%;
+            }
         }
     }
 }
